--- a/index.html
+++ b/index.html
@@ -71,7 +71,25 @@
       <img src="Survivalist_Mobile_Case_Study_4k_Page_22.png" alt="Case Study Slide 22" loading="lazy" decoding="async" />
       <img src="Survivalist_Mobile_Case_Study_4k_Page_23.png" alt="Case Study Slide 23" loading="lazy" decoding="async" />
       <img src="Survivalist_Mobile_Case_Study_4k_Page_24.png" alt="Case Study Slide 24" loading="lazy" decoding="async" />
-      <img src="Survivalist_Mobile_Case_Study_4k_Page_25.png" alt="Case Study Slide 25" loading="lazy" decoding="async" />
+      <div class="slide slide--25">
+        <img src="Survivalist_Mobile_Case_Study_4k_Page_25.png" alt="Case Study Slide 25" loading="lazy" decoding="async" />
+        <a
+          class="hotspot hotspot--portfolio"
+          href="https://evan-alexander-adamson-design.webflow.io/"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="See more of my work (opens in a new tab)"
+          title="See more of my work"
+        ></a>
+        <a
+          class="hotspot hotspot--linkedin"
+          href="https://www.linkedin.com/in/evan-alexander-adamson/"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Open Evan Alexander Adamson on LinkedIn (opens in a new tab)"
+          title="LinkedIn profile"
+        ></a>
+      </div>
     </main>
     <script>
       (function () {
